--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cors": "^2.8.5",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-lines-ellipsis": "^0.14.1",
+    "react-scripts": "3.0.1",
+    "sass-loader": "^7.1.0",
+    "styled-components": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
