--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "movie-list",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://YubinChung.github.io/movie-list",
   "dependencies": {
     "axios": "^0.18.0",
     "cors": "^2.8.5",
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -17,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy":"yarn build&&gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
